LPS-81471 Initial tooltip position to avoid covering ace editor window

--- a/modules/apps/fragment/fragment-web/src/main/resources/META-INF/resources/css/SourceEditor.scss
+++ b/modules/apps/fragment/fragment-web/src/main/resources/META-INF/resources/css/SourceEditor.scss
@@ -38,4 +38,9 @@
 			margin-right: 0.55rem;
 		}
 	}
+
+	.help-tooltip {
+		bottom: 0;
+		right: 0;
+	}
 }
